# prologdex

./: Cargo.toml  Justfile  README.md  dex.pro  draft.pro  index.html  prologdex.pro
db/: dex.pro  prologdex.pl  prologdex.pro  s6.pl  stats.pl  type-chart.pl
db/dex/: moves.pl  pokemon.pl
dex/: dex.pl  dex.pro  draft.pl  draft.pro  learnsets.pl  prologdex.pl  prologdex.pro  s6-board.pro  s6-draft.pro  s6.pl  type-chart.pl
scripts/: convert-learnsets.js  create-dex.js  generate-dex.js  old.js  package-lock.json  package.json
src/: lib.rs
www/: components.js  index.html
