[package]
name = "prologdex"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
scryer-prolog = { version = "0.10.0", default-features = false }
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = ["Document", "Element", "HtmlElement", "Node", "Window"] }
